@@ -925,7 +925,7 @@ lemma (in weak_partial_order) weak_total_orderI:
 
 text \<open>Total orders are lattices.\<close>
 
-sublocale weak_total_order < weak: weak_lattice
+sublocale weak_total_order < weak?: weak_lattice
 proof
   fix x y
   assume L: "x \<in> carrier L"  "y \<in> carrier L"
@@ -1132,14 +1132,14 @@ locale upper_semilattice = partial_order +
   assumes sup_of_two_exists:
     "[| x \<in> carrier L; y \<in> carrier L |] ==> EX s. least L s (Upper L {x, y})"
 
-sublocale upper_semilattice < weak: weak_upper_semilattice
+sublocale upper_semilattice < weak?: weak_upper_semilattice
   by standard (rule sup_of_two_exists)
 
 locale lower_semilattice = partial_order +
   assumes inf_of_two_exists:
     "[| x \<in> carrier L; y \<in> carrier L |] ==> EX s. greatest L s (Lower L {x, y})"
 
-sublocale lower_semilattice < weak: weak_lower_semilattice
+sublocale lower_semilattice < weak?: weak_lower_semilattice
   by standard (rule inf_of_two_exists)
 
 locale lattice = upper_semilattice + lower_semilattice
@@ -1190,7 +1190,7 @@ text \<open>Total Orders\<close>
 locale total_order = partial_order +
   assumes total_order_total: "[| x \<in> carrier L; y \<in> carrier L |] ==> x \<sqsubseteq> y | y \<sqsubseteq> x"
 
-sublocale total_order < weak: weak_total_order
+sublocale total_order < weak?: weak_total_order
   by standard (rule total_order_total)
 
 text \<open>Introduction rule: the usual definition of total order\<close>
@@ -1202,7 +1202,7 @@ lemma (in partial_order) total_orderI:
 
 text \<open>Total orders are lattices.\<close>
 
-sublocale total_order < weak: lattice
+sublocale total_order < weak?: lattice
   by standard (auto intro: sup_of_two_exists inf_of_two_exists)
 
 
@@ -1214,7 +1214,7 @@ locale complete_lattice = lattice +
     and inf_exists:
     "[| A \<subseteq> carrier L |] ==> EX i. greatest L i (Lower L A)"
 
-sublocale complete_lattice < weak: weak_complete_lattice
+sublocale complete_lattice < weak?: weak_complete_lattice
   by standard (auto intro: sup_exists inf_exists)
 
 text \<open>Introduction rule: the usual definition of complete lattice\<close>
