@@ -267,6 +267,10 @@ occasionally useful for demonstration and testing purposes.
 
 *** Pure ***
 
+* Qualifiers in locale expressions default to mandatory ('!')
+regardless of the command.  Previously, for 'locale' and 'sublocale'
+the default was optional ('?').  INCOMPATIBILITY
+
 * Command 'print_definitions' prints dependencies of definitional
 specifications. This functionality used to be part of 'print_theory'.
 
